WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68309
[Qt][WK2] fast/forms/submit-to-blank-multiple-times.html fails
https://bugs.webkit.org/show_bug.cgi?id=68309
Summary
[Qt][WK2] fast/forms/submit-to-blank-multiple-times.html fails
Csaba Osztrogonác
Reported
2011-09-17 01:01:01 PDT
fast/forms/submit-to-blank-multiple-times.html introduced in
http://trac.webkit.org/changeset/95226
. but fail on Qt-WK2 platfrom. diff: --- /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/fast/forms/submit-to-blank-multiple-times-expected.txt +++ /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/fast/forms/submit-to-blank-multiple-times-actual.txt @@ -9,7 +9,4 @@ Clicking first button, should open new window PASS Pressing space on second button, should open new window -PASS -Pressing space on second button, should open new window -PASS
Attachments
Patch
(2.84 KB, patch)
2012-05-21 13:50 PDT
,
Hugo Parente Lima
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2011-09-17 01:08:58 PDT
Skipped by
http://trac.webkit.org/changeset/95376
until fix.
Hugo Parente Lima
Comment 2
2012-05-21 10:45:47 PDT
I'm taking a look at this.
Hugo Parente Lima
Comment 3
2012-05-21 13:50:56 PDT
Created
attachment 143091
[details]
Patch
WebKit Review Bot
Comment 4
2012-05-21 14:52:21 PDT
Comment on
attachment 143091
[details]
Patch Clearing flags on attachment: 143091 Committed
r117820
: <
http://trac.webkit.org/changeset/117820
>
WebKit Review Bot
Comment 5
2012-05-21 14:52:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug