[Qt][WK2] fast/forms/submit-to-blank-multiple-times.html fails https://bugs.webkit.org/show_bug.cgi?id=68309

Patch by Hugo Parente Lima <hugo.lima@openbossa.org> on 2012-05-21
Reviewed by Alexis Menard.

Source/WebKit2:

Force focus when the element receives a double click event.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebView::mouseDoubleClickEvent):

LayoutTests:

Unskip the test.

* platform/qt-5.0-wk2/Skipped:

Canonical link: https://commits.webkit.org/104708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117820 268f45cc-cd09-0410-ab3c-d52691b4dbfc